[workspace]
members = ["cw-dex", "test-contracts/*", "test-helpers"]
resolver = "2"

[workspace.package]
authors       = ["Apollo Devs <shared@apollo.farm>"]
edition       = "2021"
license       = "MPL-2.0"
homepage      = "https://apollo.farm"
repository    = "https://github.com/apollodao/cw-dex"
documentation = "https://docs.rs/cw-dex"
keywords      = ["blockchain", "cosmos", "cosmwasm"]
rust-version  = "1.64.0"

[workspace.dependencies]
cosmwasm-schema = "1.2.1"
cosmwasm-std = "1.2.1"
cosmwasm-storage = "1.2.1"
cw-storage-plus = "1.0"
cw2 = "1.0"
cw-utils = "1.0"
cw20 = "1.0"
cw20-base = "1.0"
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
apollo-cw-asset = "0.1.1"
osmosis-std = { git = "https://github.com/apollodao/osmosis-rust.git", rev = "cd3e84201b08d168ee848acbebc85b1da7cab3fa" }
cw-it = { git = "https://github.com/apollodao/cw-it.git", rev = "5bc2c12814da4fd6c524d050be988a7565b0e53f" }
cw-dex = { path = "cw-dex" }
cw-dex-test-contract = { path = "test-contracts/package" }
cw-dex-test-helpers = { path = "test-helpers" }
apollo-utils = "0.1.0"
astroport = "2.8.0"

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true
rpath            = false
