[workspace]
members = ["cw-dex", "cw-dex-astroport", "cw-dex-osmosis", "test-contracts/*", "test-helpers"]
resolver = "2"

[workspace.package]
authors       = ["Apollo Devs <shared@apollo.farm>"]
edition       = "2021"
license       = "MPL-2.0"
homepage      = "https://apollo.farm"
repository    = "https://github.com/apollodao/cw-dex"
documentation = "https://docs.rs/cw-dex"
keywords      = ["blockchain", "cosmos", "cosmwasm"]
rust-version  = "1.64.0"

[workspace.dependencies]
cosmwasm-schema = "1.2.1"
cosmwasm-std = "1.5.3"
cosmwasm-storage = "1.2.1"
cw-storage-plus = "1.0"
cw2 = "1.0"
cw-utils = "1.0"
cw20 = "1.0"
cw20-base = "1.0"
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
apollo-cw-asset = "0.1.1"
osmosis-std = "0.22.0"
cw-it = "0.3.0"
apollo-utils = "0.1.0"
astroport = "2.9.0"
astroport_v3 = { package = "astroport", version = "3.11.1" }
test-case = "3.0.0"
proptest = "1.0.0"

# Workspace packages
cw-dex = { path = "cw-dex", version = "0.5.3" }
cw-dex-astroport = { path = "cw-dex-astroport", version = "0.1.1" }
cw-dex-osmosis = { path = "cw-dex-osmosis", version = "0.1.0" }
cw-dex-test-contract = { path = "test-contracts/package" }
astroport-test-contract = { path = "test-contracts/astroport-test-contract" }
cw-dex-test-helpers = { path = "test-helpers" }

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true
rpath            = false
