[package]
name = "cw-dex-astroport"
authors = ["Apollo Devs"]
description = "Implementation of the cw-dex API for the Astroport AMM"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/apollodao/cw-dex"
version = "0.1.0"
readme = "README.md"

[features]
default = []
osmosis-test-tube = ["cw-it/osmosis-test-tube"]
# backtraces = ["cosmwasm-std/backtraces", "osmosis-std/backtraces"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
cw-dex = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
apollo-cw-asset = { workspace = true, features = ["astroport"] }
cw-utils = { workspace = true }
cw20 = { workspace = true }
apollo-utils = { workspace = true }

# Astroport
astroport = { workspace = true }
astroport_v3 = { workspace = true }
cw2  = { workspace = true }

[dev-dependencies]
cw-it = { workspace = true, features = ["astroport", "multi-test", "astroport-multi-test"] }
test-case = { workspace = true }
cw-dex-test-contract = { workspace = true }
cw-dex-test-helpers = { workspace = true, features = ["astroport", "osmosis-test-tube"] }
proptest = { workspace = true }
cw20-base = { workspace = true }
cw20 = { workspace = true }
