[package]
name = "cw-dex-osmosis"
authors = ["Apollo Devs"]
description = "Implementation of the cw-dex API for the Osmosis AMM"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/apollodao/cw-dex"
version = "0.1.0"
readme = "README.md"

[features]
default = []
osmosis-test-tube = ["cw-it/osmosis-test-tube"]
# backtraces = ["cosmwasm-std/backtraces", "osmosis-std/backtraces"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
cw-dex = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
apollo-cw-asset = { workspace = true }
cw-utils = { workspace = true }
apollo-utils = { workspace = true }
osmosis-std = { workspace = true }


[dev-dependencies]
cw-it = { workspace = true }
test-case = { workspace = true }
cw-dex-test-contract = { workspace = true }
cw-dex-test-helpers = { workspace = true, features = ["osmosis", "osmosis-test-tube"] }
proptest = { workspace = true }
cw20-base = { workspace = true }
cw20 = { workspace = true }
