[package]
authors = ["Apollo Devs"]
description = "Helper library for interacting with Cosmos dexes"
edition = "2021"
license = "MPL-2.0"
name = "cw-dex"
repository = "https://github.com/apollodao/cw-dex"
version = "0.4.1"
readme = "README.md"

[features]
default = ["astroport", "osmosis-test-tube"]
osmosis = ["osmosis-std", "cw-it/osmosis", "osmosis-test-tube", "cw-dex-test-helpers/osmosis"]
osmosis-test-tube = ["cw-it/osmosis-test-tube", "cw-dex-test-helpers/osmosis-test-tube"]
astroport = ["dep:astroport","dep:astroport_v3", "dep:uint", "apollo-cw-asset/astroport", "dep:cw2", "cw-it/astroport", "cw-it/astroport-multi-test", "cw-dex-test-helpers/astroport"]
# backtraces = ["cosmwasm-std/backtraces", "osmosis-std/backtraces"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
apollo-cw-asset = { workspace = true }
cw-utils = { workspace = true }
cw20 = { workspace = true }
apollo-utils = { workspace = true }

# Osmosis
osmosis-std = { workspace = true, optional = true }

# Astroport
astroport = { workspace = true, optional = true }
astroport_v3 = { workspace = true, optional = true }
uint = { version = "0.9.3", optional = true }
cw2  = { workspace = true, optional = true }

[dev-dependencies]
cw-it = { workspace = true }
test-case = "3.0.0"
cw-dex-test-contract = { workspace = true }
cw-dex-test-helpers = { workspace = true }
proptest = "1.0.0"
cw20-base = { workspace = true }
