[package]
authors = ["Apollo Devs"]
description = "Helper library for interacting with Cosmos dexes"
edition = "2021"
license = "MPL-2.0"
name = "cw-dex"
repository = "https://github.com/apollodao/cw-dex"
version = "0.6.0-rc.2"
readme = "README.md"

[features]
default = []
osmosis = ["osmosis-std", "osmosis-test-tube"]
osmosis-test-tube = ["cw-it/osmosis-test-tube"]
astroport = ["dep:astroport", "dep:astroport_v3", "apollo-cw-asset/astroport", "dep:cw2", "cw-it/astroport", "cw-it/astroport-multi-test"]
# backtraces = ["cosmwasm-std/backtraces", "osmosis-std/backtraces"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
thiserror = { workspace = true }
apollo-cw-asset = { workspace = true }
cw-utils = { workspace = true }
cw20 = { workspace = true }
apollo-utils = { workspace = true }

# Osmosis
osmosis-std = { workspace = true, optional = true }

# Astroport
astroport = { workspace = true, optional = true }
astroport_v3 = { workspace = true, optional = true }
cw2  = { workspace = true, optional = true }

[dev-dependencies]
cw-it = { workspace = true, features = ["osmosis", "astroport", "multi-test", "astroport-multi-test"] }
test-case = "3.0.0"
cw-dex-test-contract = { workspace = true }
cw-dex-test-helpers = { workspace = true, features = ["osmosis", "astroport"] }
proptest = "1.0.0"
cw20-base = { workspace = true }
cw20 = { workspace = true }
