[package]
authors = ["Apollo Devs"]
description = "Helper library for interacting with Cosmos dexes"
edition = "2021"
license = "MPL-2.0"
name = "cw-dex"
repository = "https://github.com/apollodao/cw-dex"
version = "0.5.3"
readme = "README.md"

[features]
default = []
osmosis = ["osmosis-std", "osmosis-test-tube", "cw-it/osmosis"]
osmosis-test-tube = ["cw-it/osmosis-test-tube"]
astroport = ["dep:astroport", "apollo-cw-asset/astroport", "dep:cw2", "cw-it/astroport", "cw-it/astroport-multi-test"]
# backtraces = ["cosmwasm-std/backtraces", "osmosis-std/backtraces"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
thiserror = { workspace = true }
apollo-cw-asset = { workspace = true }
cw-utils = { workspace = true }
cw20 = { workspace = true }
apollo-utils = { workspace = true }

# Osmosis
osmosis-std = { version = "0.19.2", optional = true }

# Astroport
astroport = { workspace = true, optional = true }
cw2  = { workspace = true, optional = true }

[dev-dependencies]
cw-it = { workspace = true, features = ["multi-test"] }
test-case = { workspace = true }
cw-dex-test-contract = { workspace = true }
cw-dex-test-helpers = { workspace = true, features = ["astroport", "osmosis", "osmosis-test-tube"] }
proptest = { workspace = true }
cw20-base = { workspace = true }
cw20 = { workspace = true }
