[package]
name = "cw-dex-test-helpers"
description = "Contract to test the cw-dex library"
version = "0.1.0"
authors = ["Pacman <pacman@apollo.farm>"]
edition = "2021"
license.workspace = true

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
cosmwasm-std = { workspace = true }
cw-asset = { workspace = true }
osmosis-testing = { workspace = true }
osmosis-std = { workspace = true }
apollo-utils = { git = "https://github.com/apollodao/apollo-utils.git", rev = "bfd1abd8cd9716dccad3e74aeb3704cad9f1f41a" }
cw-dex-test-contract = { workspace = true }
cw-it = { workspace = true }