[package]
name = "cw-dex-test-helpers"
description = "Contract to test the cw-dex library"
version = "0.1.0"
authors = ["Pacman <pacman@apollo.farm>"]
edition = "2021"
license = { workspace = true }

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]


[features]
default = []
osmosis = ["cw-it/osmosis"]
astroport = ["cw-it/astroport", "cw-it/astroport-multi-test", "astroport-test-contract"]
osmosis-test-tube = ["cw-it/osmosis-test-tube"]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
cosmwasm-std = { workspace = true }
apollo-cw-asset = { workspace = true, features = ["astroport"] }
apollo-utils = { workspace = true }
cw-dex-test-contract = { workspace = true }
astroport-test-contract = { workspace = true, optional = true }
cw-it = { workspace = true }
astroport = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true }
